--- a/package.json
+++ b/package.json
@@ -56,6 +56,14 @@
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
 
+    "autoprefixer": "^6.5.2",
+    "gulp": "^3.9.1",
+    "gulp-image": "^2.7.2",
+    "gulp-newer": "^1.3.0",
+    "gulp-postcss": "^6.2.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.2.0",
+
     "@types/node": "^6.0.46",
     "@types/jasmine": "2.5.36"
   },
